removing tests from volley, dont need it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="textQuote">Quote</string>
     <string name="textAuthor">Author</string>
 
+    <string name="errorGetQuote">Error getting quote. Try again.</string>
+
     <string name="send">Send</string>
     <string name="sending">Sending...</string>
 
